# ai_new_tips

./: .coverage  .gitignore  CLAUDE.md  pyproject.toml
ainews/: __init__.py
ainews/cli/: __init__.py  config.py  cron.py  db.py  dedup.py  doctor.py  entities.py  fetch.py  main.py  process.py  push.py  run.py  sources.py  stats.py  sync.py  trend.py
ainews/config/: loader.py  settings.py
ainews/fetcher/: __init__.py  arxiv.py  (+11 more)
docs/: 01-overview.md  02-architecture.md  03-data-sources.md  04-hot-topic-detection.md  05-llm-processing.md  06-obsidian-integration.md  07-dingtalk-integration.md  08-data-storage.md  09-cli-design.md  10-scheduled-tasks.md
tests/: test_article_sync.py  test_chinese_defaults.py  test_chinese_fetcher.py  test_cli.py  test_cli_fetch.py  test_cli_process.py  test_cli_push.py  test_cli_run_cron.py  test_cli_sources_extended.py  test_config.py  test_config_extended.py  test_daily_note.py  test_database.py  test_dingtalk_client.py  test_entity_handler.py  test_entity_pages.py  test_fetcher_arxiv.py  test_fetcher_base.py  test_fetcher_hackernews.py  test_fetcher_rss.py  test_fetcher_twitter.py  test_github_fetcher.py  test_github_releases.py  test_hf_papers_fetcher.py  test_llm_client.py  test_logging.py  test_message_formatter.py  test_more_sources_constants.py  test_obsidian_client.py  test_obsidian_templates.py  test_pipeline_runner.py  test_processor.py  test_prompts.py  test_push_categorize_and_logo.py  test_push_strategy.py  test_reddit_fetcher.py  test_scheduler_launchd.py  test_scheduler_templates.py  test_storage.py  test_sync_cli.py
(+63 files in other folders)
